
AC_INIT([smog], [0.1])

AC_CONFIG_SRCDIR([src/smog.c])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC
AX_PROG_BISON

AX_PTHREAD

PKG_CHECK_MODULES(LIBYAML, [ yaml-0.1 ])
AC_SUBST([LIBYAML_CFLAGS])
AC_SUBST([LIBYAML_LIBS])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
